<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">First Global Capital</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_settings">Settings</string>

    <string name="tab_home">Home</string>
    <string name="tab_offers">Offers</string>
    <string name="tab_locations">Locations</string>
    
    <string name="user_name">JAMES CHIN</string>
    <string name="logged_in">Logged In</string>
    <string name="new_messages">No New Messages.</string>
    <string name="home_spinner0">My Accounts</string>
    <string name="home_spinner1">Messages</string>
    <string name="home_spinner2">Alerts</string>
    <string name="home_top">Top</string>
    
    <string name="demo1">This Is A Demonstration For Employment Purposes Only.</string>
    <string name="demo2">For more demos visit http://goo.gl/xP4Zp.</string>
    <string name="demo3">Offers Feed Disabled. Showing Static Data.</string>
    <string name="copyright">© 2012 First Global Capital Corporation. All rights reserved.</string>
    
    <string name="offers_header1">Banking options to fit your life.</string>
    <string name="offers_body1">Whether it\'s opening a new college checking account or planning for retirement, we\'ll help you find the solution that best fits your needs.</string>
    <string name="offers_body2">Open a new qualifying checking or savings account and receive a $250 bonus.</string>
    <string name="offers_body3">Join our new Customer Rewards Program and receive up to 5% cashback for qualifying purchases.</string>
    <string name="learn_more">Learn More</string>
    
    <string name="GooglePlayServices0">Loading Map</string>
    <string name="GooglePlayServices1">Google Play Services Missing on this device!</string>
    <string name="GooglePlayServices2">Google Play Services Version Update Required on this device!</string>
    <string name="GooglePlayServices3">Google Play Services Disabled on this device!</string>
    <string name="GooglePlayServices9">Google Play Services installed on this device is not authentic!</string> 
    <string name="get_directions">Get Directions</string>
</resources>